<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/operatorCallView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/operatorCallContentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/kenes_horizontal_spacing"
        android:paddingTop="20dp"
        android:paddingEnd="@dimen/kenes_horizontal_spacing">

        <LinearLayout
            android:id="@+id/audioCallButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/kenes_bg_orange"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="37dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/kenes_ic_man_raising_hand" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica_neue_bold"
                android:letterSpacing="0.015"
                android:text="@string/kenes_audio_call"
                android:textColor="#ffa000"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/helvetica_roman"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="2sp"
                android:text="@string/kenes_audio_call_to_operator"
                android:textColor="#95ffa000"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/videoCallButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/kenes_bg_green"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="37dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/kenes_ic_female_technologist" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica_neue_bold"
                android:letterSpacing="0.015"
                android:text="@string/kenes_video_call"
                android:textColor="#4bb34b"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/helvetica_roman"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="2sp"
                android:text="@string/kenes_video_call_to_operator"
                android:textColor="#954bb34b"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>