<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <q19.kenes_widget.ui.components.WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <q19.kenes_widget.ui.components.ProgressView
        android:id="@+id/progressView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/overlayView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/kenes_black_alpha_dd"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/closeButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="top|right"
            android:layout_margin="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="20dp"
            android:src="@drawable/ic_close_white_24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/kenes_info_authentication_importance_title"
            android:textAllCaps="true"
            android:textColor="@color/kenes_white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/kenes_info_authentication_importance_message"
            android:textAllCaps="false"
            android:textColor="@color/kenes_white"
            android:textSize="15sp"
            android:textStyle="normal" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/agreeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="50dp"
            android:background="@drawable/kenes_bg_ripple"
            android:backgroundTint="@color/kenes_white"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:minHeight="50dp"
            android:minWidth="160dp"
            android:text="@string/kenes_action_continue"
            android:textAllCaps="false"
            android:textColor="@color/kenes_black"
            android:textSize="15sp" />

    </LinearLayout>

</FrameLayout>